Add some information labels to the defaults pane

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1422,7 +1422,7 @@
                     <property name="visible">True</property>
                     <property name="border_width">9</property>
                     <property name="orientation">vertical</property>
-                    <property name="spacing">9</property>
+                    <property name="spacing">12</property>
                     <child>
                       <object class="GtkHBox" id="hbox_display">
                         <property name="visible">True</property>
@@ -1524,6 +1524,41 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
                             <child>
+                              <object class="GtkHBox" id="hbox58">
+                                <property name="visible">True</property>
+                                <property name="spacing">9</property>
+                                <child>
+                                  <object class="GtkImage" id="image3">
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-dialog-info</property>
+                                    <property name="icon-size">6</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="label14">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">A working space is a default colorspace that is not associated with a specific device.</property>
+                                    <property name="wrap">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkHBox" id="hbox42">
                                 <property name="visible">True</property>
                                 <property name="spacing">12</property>
@@ -1559,7 +1594,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1598,7 +1633,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
@@ -1643,6 +1678,41 @@
                             <property name="orientation">vertical</property>
                             <property name="spacing">3</property>
                             <child>
+                              <object class="GtkHBox" id="hbox59">
+                                <property name="visible">True</property>
+                                <property name="spacing">9</property>
+                                <child>
+                                  <object class="GtkImage" id="image4">
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-dialog-info</property>
+                                    <property name="icon-size">6</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="label15">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">The rendering intent defines how color should be transformed from one colorspace to another.</property>
+                                    <property name="wrap">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkHBox" id="hbox14">
                                 <property name="visible">True</property>
                                 <property name="spacing">12</property>
@@ -1678,7 +1748,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1717,7 +1787,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
