--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -647,7 +647,7 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">True</property>
-                                            <property name="tooltip_text" translatable="yes">Reset the sliders to thier default values</property>
+                                            <property name="tooltip_text" translatable="yes">Reset the sliders to the default values</property>
                                             <property name="use_underline">True</property>
                                           </object>
                                           <packing>
