--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -213,6 +213,14 @@
                                           </packing>
                                         </child>
                                         <child>
+                                          <object class="GtkHSeparator" id="hseparator1">
+                                            <property name="visible">True</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">3</property>
+                                          </packing>
+                                        </child>
+                                        <child>
                                           <object class="GtkButton" id="button_assign_make_default">
                                             <property name="label" translatable="yes" comments="Makes the profile the default for the device">_Make Default</property>
                                             <property name="visible">True</property>
@@ -223,7 +231,7 @@
                                             <property name="use_underline">True</property>
                                           </object>
                                           <packing>
-                                            <property name="position">3</property>
+                                            <property name="position">4</property>
                                           </packing>
                                         </child>
                                       </object>
