--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -5,7 +5,7 @@
   <object class="GtkDialog" id="dialog_viewer">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Color Profile Viewer</property>
-    <property name="window_position">center</property>
+    <property name="window_position">center-always</property>
     <property name="icon_name">preferences-system</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
