--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -609,7 +609,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkHBox" id="hbox55">
+                                      <object class="GtkVBox" id="vbox55">
                                         <property name="visible">True</property>
                                         <property name="spacing">6</property>
                                         <child>
@@ -653,7 +653,7 @@
                                           </packing>
                                         </child>
                                         <child>
-                                          <object class="GtkHSeparator" id="hseparator1">
+                                          <object class="GtkVSeparator" id="vseparator1">
                                             <property name="visible">True</property>
                                           </object>
                                           <packing>
