Fix up a translator comment. Fixes #625504

--- a/data/gcm-picker.ui
+++ b/data/gcm-picker.ui
@@ -282,7 +282,7 @@
                             <child>
                               <object class="GtkLabel" id="label_ambient_title">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes" comments="This shows the error in the conversion to RGB.">Ambient:</property>
+                                <property name="label" translatable="yes" comments="This refers to the amount of ambient light on the sensor">Ambient:</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
