--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
@@ -55,7 +55,7 @@
                         <property name="spacing">6</property>
                         <child>
                           <object class="GtkButton" id="button_profile_import">
-                            <property name="label" translatable="yes">_Add&#x2026;</property>
+                            <property name="label" translatable="yes">_Add…</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -200,6 +200,7 @@
                                             <child>
                                               <object class="GtkHBox" id="hbox60">
                                                 <property name="visible">True</property>
+                                                <property name="spacing">3</property>
                                                 <child>
                                                   <object class="GtkVBox" id="vbox_cie_axis">
                                                     <property name="orientation">vertical</property>
@@ -408,13 +409,31 @@
                                                   </packing>
                                                 </child>
                                                 <child>
+                                                  <object class="GtkButton" id="button_image_prev">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_action_appearance">False</property>
+                                                    <child>
+                                                      <object class="GtkImage" id="image2">
+                                                        <property name="visible">True</property>
+                                                        <property name="stock">gtk-media-previous</property>
+                                                      </object>
+                                                    </child>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">3</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
                                                   <object class="GtkVBox" id="vbox_preview_input">
                                                     <property name="visible">True</property>
                                                     <property name="orientation">vertical</property>
                                                     <property name="spacing">6</property>
                                                     <child>
                                                       <object class="GtkLabel" id="label1">
-                                                        <property name="visible">True</property>
                                                         <property name="label" translatable="yes" comments="This is an example image that is saved in sRGB gamut">sRGB example</property>
                                                       </object>
                                                       <packing>
@@ -426,7 +445,7 @@
                                                   </object>
                                                   <packing>
                                                     <property name="expand">False</property>
-                                                    <property name="position">3</property>
+                                                    <property name="position">4</property>
                                                   </packing>
                                                 </child>
                                                 <child>
@@ -436,7 +455,6 @@
                                                     <property name="spacing">6</property>
                                                     <child>
                                                       <object class="GtkLabel" id="label2">
-                                                        <property name="visible">True</property>
                                                         <property name="label" translatable="yes">sRGB example</property>
                                                       </object>
                                                       <packing>
@@ -448,7 +466,26 @@
                                                   </object>
                                                   <packing>
                                                     <property name="expand">False</property>
-                                                    <property name="position">4</property>
+                                                    <property name="position">5</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkButton" id="button_image_next">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_action_appearance">False</property>
+                                                    <child>
+                                                      <object class="GtkImage" id="image3">
+                                                        <property name="visible">True</property>
+                                                        <property name="stock">gtk-media-next</property>
+                                                      </object>
+                                                    </child>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">6</property>
                                                   </packing>
                                                 </child>
                                               </object>
