--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -6,7 +6,7 @@
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Color Profile Viewer</property>
     <property name="window_position">center-always</property>
-    <property name="icon_name">preferences-system</property>
+    <property name="icon_name">gnome-color-manager</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
