Port to GtkComboBoxText

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -256,7 +256,8 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkComboBox" id="combobox_target">
+                              <object class="GtkComboBoxText" id="combobox_target">
+                                <property name="entry-text-column">0</property>
                                 <property name="visible">True</property>
                               </object>
                               <packing>
