--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -222,7 +222,8 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBox" id="combobox_virtual_type">
+                  <object class="GtkComboBoxText" id="combobox_virtual_type">
+                    <property name="entry-text-column">0</property>
                     <property name="visible">True</property>
                   </object>
                   <packing>
@@ -1241,7 +1242,8 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkComboBox" id="combobox_rendering_display">
+                          <object class="GtkComboBoxText" id="combobox_rendering_display">
+                            <property name="entry-text-column">0</property>
                             <property name="visible">True</property>
                           </object>
                           <packing>
@@ -1283,7 +1285,8 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkComboBox" id="combobox_rendering_softproof">
+                          <object class="GtkComboBoxText" id="combobox_rendering_softproof">
+                            <property name="entry-text-column">0</property>
                             <property name="visible">True</property>
                           </object>
                           <packing>
