--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -144,7 +144,8 @@
                                               <object class="GtkHBox" id="hbox38">
                                                 <property name="visible">True</property>
                                                 <child>
-                                                  <object class="GtkComboBox" id="combobox_graph">
+                                                  <object class="GtkComboBoxText" id="combobox_graph">
+                                                    <property name="entry-text-column">0</property>
                                                     <property name="visible">True</property>
                                                   </object>
                                                   <packing>
