Remove the window title from the modal calibration dialogs

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="dialog_calibrate">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes" comments="window title">Device Calibration</property>
+    <property name="title" translatable="no" comments="window title"></property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center</property>
