--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -201,21 +201,6 @@
                 <property name="position">2</property>
               </packing>
             </child>
-            <child>
-              <object class="GtkButton" id="button_viewer">
-                <property name="label" translatable="yes" comments="Button to view installed profiles">Pr_ofile Viewer</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
-                <property name="use_underline">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
           </object>
         </child>
         <child>
@@ -633,6 +618,19 @@
                     <property name="position">1</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkLabel" id="label_viewer">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label">&lt;a href="moo"&gt;Compare profiles...&lt;/a&gt;</property>
+                    <property name="use_markup">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="position">3</property>
@@ -814,7 +812,6 @@
     <action-widgets>
       <action-widget response="0">button_help</action-widget>
       <action-widget response="0">button_default</action-widget>
-      <action-widget response="0">button_viewer</action-widget>
     </action-widgets>
   </object>
   <object class="GtkDialog" id="dialog_virtual">
