--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<interface>
+<interface domain="gnome-color-manager">
   <requires lib="gtk+" version="2.20"/>
   <object class="GtkDialog" id="dialog_assign">
     <property name="can_focus">False</property>
