Do not install a control panel pane
Instead ship a gcm-prefs binary (again...) as apparently the control center maintainers
want to remove the shared library in 3.2.

What a complete waste of time.

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<interface domain="gnome-color-manager">
+<interface>
   <requires lib="gtk+" version="2.20"/>
   <object class="GtkDialog" id="dialog_assign">
     <property name="can_focus">False</property>
@@ -17,6 +17,7 @@
       <object class="GtkBox" id="dialog-vbox3">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="dialog-action_area3">
@@ -813,6 +814,7 @@
       <object class="GtkBox" id="dialog-vbox2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="dialog-action_area2">
