viewer: wrap the text to the character, not the word

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -345,6 +345,7 @@
                                 <property name="label">manufacturer</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
+                                <property name="wrap_mode">char</property>
                                 <property name="selectable">True</property>
                               </object>
                               <packing>
@@ -411,6 +412,7 @@
                                 <property name="label">model</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
+                                <property name="wrap_mode">char</property>
                                 <property name="selectable">True</property>
                               </object>
                               <packing>
@@ -610,6 +612,7 @@
                                 <property name="label">non-free</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
+                                <property name="wrap_mode">char</property>
                                 <property name="selectable">True</property>
                               </object>
                               <packing>
@@ -742,7 +745,7 @@
                                 <property name="label">filename</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
-                                <property name="wrap_mode">word-char</property>
+                                <property name="wrap_mode">char</property>
                                 <property name="selectable">True</property>
                               </object>
                               <packing>
