viewer: vertically align the information header text for labels that might overfill

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -315,6 +315,7 @@
                               <object class="GtkLabel" id="label_title_profile_manufacturer">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The manufacturer of the profile">Device manufacturer:</property>
                                 <attributes>
                                   <attribute name="weight" value="bold"/>
@@ -382,6 +383,7 @@
                               <object class="GtkLabel" id="label_title_profile_model">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The manufacturer of the profile">Device model:</property>
                                 <attributes>
                                   <attribute name="weight" value="bold"/>
@@ -582,6 +584,7 @@
                               <object class="GtkLabel" id="label_title_copyright">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The licence of the profile, normally non-free">License:</property>
                                 <attributes>
                                   <attribute name="weight" value="bold"/>
@@ -715,6 +718,7 @@
                               <object class="GtkLabel" id="label_title_filename">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="valign">start</property>
                                 <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Filename:</property>
                                 <attributes>
                                   <attribute name="weight" value="bold"/>
